[project]
name = "plotille"
version = "5.2.0"
description = "Plot in the terminal using braille dots."
authors = [{ name = "Tammo Ippen", email = "tammo.ippen@posteo.de" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
    "plot",
    "scatter",
    "histogram",
    "terminal",
    "braille",
    "unicode",
    "timeseries",
]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/tammoippen/plotille"
Repository = "https://github.com/tammoippen/plotille"

[dependency-groups]
dev = [
    "mypy",
    "numpy",
    "Pillow",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "ruff",
]

[tool.ruff.lint]
select = ["B", "BLE", "C", "E", "F", "PL", "Q", "RUF", "T", "W", "I"]
pylint.max-args = 6

[tool.ruff.lint.per-file-ignores]
"**/examples/*" = ["T201"]
"**/tests/*" = ["E501", "PLR2004", "PLR0913", "PLR0915", "T201"] #["B011", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["plotille"]

[tool.mypy]
files = "plotille/"
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
allow_redefinition = true
local_partial_types = true
warn_unreachable = true
disallow_any_unimported = true

# [tools.mypy-tests.*]
# disallow_untyped_calls = false
# disallow_untyped_defs = false
# disallow_incomplete_defs = false
# warn_unreachable = false

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
