[project]
name = "plotille"
version = "6.0.0"
description = "Plot in the terminal using braille dots."
authors = [{ name = "Tammo Ippen", email = "tammo.ippen@posteo.de" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "MIT"
keywords = [
  "plot",
  "scatter",
  "histogram",
  "terminal",
  "braille",
  "unicode",
  "timeseries",
]
classifiers = [
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Terminals",
]

[project.urls]
Homepage = "https://github.com/tammoippen/plotille"
Repository = "https://github.com/tammoippen/plotille"

[dependency-groups]
dev = [
  "brython>=3.11.1",
  "mkdocs>=1.5.0",
  "mkdocs-material>=9.5.0",
  "mkdocstrings[python]>=0.24.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.0",
  "mypy",
  "numpy",
  "Pillow",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "ruff",
  "ty>=0.0.3",
]

[tool.pytest.ini_options]
addopts = "--cov=plotille --cov-branch --cov-report term-missing --cov-report xml --cov-report html:cov_html --doctest-modules --doctest-continue-on-failure"
testpaths = ["tests", "plotille"]


[tool.ruff.lint]
# select = ["B", "BLE", "C", "E", "F", "PL", "Q", "RUF", "T", "W", "I"]
# pylint.max-args = 6
select = [
  # "A",
  "B",
  "BLE",
  # "C4",
  # "DTZ",
  "E",
  # "EM",
  "F",
  "FA",
  # "FBT",
  "I",
  "PT",
  "RSE",
  "RUF",
  "S",
  "T20",
  "TRY",
  "UP",
  "W605",
]
ignore = [
  "E111",
  "E114",
  "E117",
  "E501",
  "PT011",
  "PT013",
  "S101",
  "S110",
  "S112",
  "S311",
  "TRY002",
  "TRY003",
  "UP007",
]

[tool.ruff.lint.per-file-ignores]
"**/examples/*" = ["T201"]
"**/tests/*" = [
  "E501",
  "PLR2004",
  "PLR0913",
  "PLR0915",
  "T201",
] #["B011", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["plotille"]
split-on-trailing-comma = false

[tool.ruff.format]
skip-magic-trailing-comma = true

[tool.mypy]
files = "plotille/"
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true
allow_redefinition = true
local_partial_types = true
warn_unreachable = true
disallow_any_unimported = true

# [tools.mypy-tests.*]
# disallow_untyped_calls = false
# disallow_untyped_defs = false
# disallow_incomplete_defs = false
# warn_unreachable = false

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "plotille"
module-root = "."
