[coverage:report]
show_missing = True

[coverage:run]
branch = True

[flake8]
application_import_names = plotille
max-line-length = 120
import-order-style = google
ignore = N803 W503
max-complexity = 8

[tool:pytest]
python_paths = .
mock_use_standalone_module = true
addopts = --cov=plotille
          --cov-report term-missing
          --cov-report xml
          --cov-report html:cov_html
          --cov-config setup.cfg

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
description-file = README.md
