[coverage:report]
show_missing = True

[coverage:run]
branch = True

[flake8]
application_import_names = plotille
max_line_length = 120
import_order_style = google
ignore = N803 W503
max_complexity = 8

[tool:pytest]
python_paths = .
mock_use_standalone_module = true
addopts = --cov=plotille
          --cov-report term-missing
          --cov-report xml
          --cov-report html:cov_html
          --cov-config setup.cfg

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
description = README.md

[options]
package_dir=
    plotille=plotille
packages=find:

[options.packages.find]
where=plotille
exclude =
    examples*
    imgs*
    tests*

