[coverage:report]
show_missing = True

[coverage:run]
branch = True

[tool:pytest]
addopts = --cov=plotille
          --cov-report term-missing
          --cov-report xml
          --cov-report html:cov_html
          --cov-config setup.cfg

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE.txt
description-file = README.md
